--- a/public/Web.config
+++ b/public/Web.config
@@ -7,6 +7,30 @@
 <system.webServer>
       <staticContent>
          <clientCache cacheControlMode="UseMaxAge" cacheControlMaxAge="00:00:15" />
+      <remove fileExtension=".mp4" />
+      <remove fileExtension=".webm" />
+      <remove fileExtension=".ogg" />
+      <remove fileExtension=".appcache" />
+      <remove fileExtension=".woff" />
+      <remove fileExtension=".eot" />
+      <remove fileExtension=".ttf" />
+      <remove fileExtension=".svg" />
+      <remove fileExtension=".woff2" />
+      <remove fileExtension=".m4a" />
+      <remove fileExtension=".json" />
+      <remove fileExtension=".scml" />
+      <mimeMap fileExtension=".scml" mimeType="application/xml" />
+      <mimeMap fileExtension=".woff2" mimeType="application/x-font-woff" />
+      <mimeMap fileExtension=".woff" mimeType="application/x-font-woff" />
+      <mimeMap fileExtension=".eot" mimeType="application/vnd.ms-fontobject" />
+      <mimeMap fileExtension=".ttf" mimeType="application/font-ttf" />
+      <mimeMap fileExtension=".svg" mimeType="image/svg+xml" />
+      <mimeMap fileExtension=".appcache" mimeType="text/cache-manifest" />
+      <mimeMap fileExtension=".json" mimeType="application/json" />
+      <mimeMap fileExtension=".m4a" mimeType="audio/x-m4a" />
+      <mimeMap fileExtension=".ogg" mimeType="video/ogg" />
+      <mimeMap fileExtension=".mp4" mimeType="video/mp4" />
+      <mimeMap fileExtension=".webm" mimeType="video/webm" />
       </staticContent>
         <!-- This part is responsible for URL rewrites -->
         <rewrite>
