--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
     "save": "^2.3.2"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts start",
+    "deploy": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
