--- a/package.json
+++ b/package.json
@@ -28,9 +28,10 @@
     "save": "^2.3.2"
   },
   "scripts": {
-    "build": "react-scripts start",
+    "dev": "react-scripts start",
     "deploy": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
+    "snapshot": "react-scripts build && react-snapshot",
     "eject": "react-scripts eject"
   },
   "devDependencies": {
