--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@remy/snap": "^1.1.1",
     "array-shuffle": "^1.0.1",
     "babel-polyfill": "^6.26.0",
     "bootstrap": "^4.1.3",
@@ -31,7 +32,7 @@
     "dev": "react-scripts start",
     "deploy": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "snapshot": "react-scripts build && react-snapshot",
+    "snap": "snap https://games.dtml.org/games/ -o snap",
     "eject": "react-scripts eject"
   },
   "devDependencies": {
