--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "dev": "react-scripts start",
     "deploy": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "snap": "snap https://games.dtml.org/games/ -o snap",
+    "snap": "react-scripts build && react-snapshot",
     "eject": "react-scripts eject"
   },
   "devDependencies": {
