Updating web.config

--- a/public/Web.config
+++ b/public/Web.config
@@ -1,7 +1,7 @@
 <configuration>
     <system.web>
   	 <customErrors mode="On">
-          <error statusCode="404" redirect="https://blog.dtml.org/games" />
+          <error statusCode="404" redirect="https://dtml.org/" />
 	</customErrors>
     </system.web>
 <system.webServer>
@@ -19,6 +19,8 @@
       <remove fileExtension=".m4a" />
       <remove fileExtension=".json" />
       <remove fileExtension=".scml" />
+      <remove fileExtension=".webp" />
+      <mimeMap fileExtension=".webp" mimeType="image/webp" />
       <mimeMap fileExtension=".scml" mimeType="application/xml" />
       <mimeMap fileExtension=".woff2" mimeType="application/x-font-woff" />
       <mimeMap fileExtension=".woff" mimeType="application/x-font-woff" />
@@ -32,19 +34,31 @@
       <mimeMap fileExtension=".mp4" mimeType="video/mp4" />
       <mimeMap fileExtension=".webm" mimeType="video/webm" />
       </staticContent>
-        <!-- This part is responsible for URL rewrites -->
-        <rewrite>
-          <rules>
-		 <rule name="ReactRouter Routes" stopProcessing="true">
-  		 <match url=".*" />
-  		 <conditions logicalGrouping="MatchAll">
-  		 <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true" />
-    		 <add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="true" />
-                 <add input="{REQUEST_URI}" pattern="^/games/api/" negate="true" />
-                 </conditions>
-                 <action type="Rewrite" url="/games/index.html" />
-           </rule>
-          </rules>
-        </rewrite>
-</system.webServer>
+  <urlCompression doStaticCompression="true" doDynamicCompression="true" />
+    <httpCompression>
+      <dynamicTypes>
+        <clear />
+        <remove mimeType="*/*" />
+        <add enabled="true" mimeType="text/*"/>
+        <add enabled="true" mimeType="message/*"/>
+        <add enabled="true" mimeType="application/x-javascript"/>
+        <add enabled="true" mimeType="application/javascript"/>
+        <add enabled="true" mimeType="application/json"/>
+        <add enabled="false" mimeType="*/*"/>
+        <add enabled="true" mimeType="application/atom+xml"/>
+        <add enabled="true" mimeType="application/atom+xml;charset=utf-8"/>
+      </dynamicTypes>
+      <staticTypes>
+        <clear />
+        <remove mimeType="*/*" />
+        <add enabled="true" mimeType="text/*"/>
+        <add enabled="true" mimeType="message/*"/>
+        <add enabled="true" mimeType="application/javascript"/>
+        <add enabled="true" mimeType="application/atom+xml"/>
+        <add enabled="true" mimeType="application/xaml+xml"/>
+        <add enabled="true" mimeType="application/json"/>
+        <add enabled="false" mimeType="*/*"/>
+      </staticTypes>
+    </httpCompression>
+ </system.webServer>
 </configuration>
