--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-facebook-pixel": "^0.1.2",
     "react-ga": "^2.5.7",
     "react-rater": "^0.4.8",
+    "react-responsive-carousel": "^3.1.51",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^1.1.5",
     "react-scroll-up": "^1.3.3",
