--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^16.8.6",
     "react-addons-test-utils": "^15.6.2",
     "react-dom": "^16.8.6",
+    "react-dom-confetti": "^0.1.3",
     "react-facebook-pixel": "^0.1.2",
     "react-ga": "^2.5.7",
     "react-rater": "^0.4.8",
