--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.28",
+    "@fortawesome/free-solid-svg-icons": "^5.13.0",
+    "@fortawesome/react-fontawesome": "^0.1.9",
     "@remy/snap": "^1.1.1",
     "array-shuffle": "^1.0.1",
     "babel-polyfill": "^6.26.0",
@@ -22,6 +25,7 @@
     "react-dom-confetti": "^0.1.3",
     "react-facebook-pixel": "^0.1.2",
     "react-ga": "^2.5.7",
+    "react-modal-video": "^1.2.3",
     "react-rater": "^0.4.8",
     "react-responsive-carousel": "^3.1.51",
     "react-router-dom": "^4.3.1",
@@ -31,7 +35,7 @@
     "save": "^2.4.0"
   },
   "scripts": {
-    "dev": "set PORT=3000 && react-scripts start",
+    "dev": "set PORT=44300 && react-scripts start",
     "deploy": "react-scripts build",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
