--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "@remy/snap": "^1.1.1",
     "array-shuffle": "^1.0.1",
     "babel-polyfill": "^6.26.0",
-    "bootstrap": "^4.3.1",
+    "bootstrap": "^4.5.0",
     "chai": "^4.2.0",
     "classnames": "^2.2.6",
     "glamor": "^2.20.40",
@@ -21,6 +21,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-addons-test-utils": "^15.6.2",
+    "react-bootstrap": "^1.0.1",
     "react-dom": "^16.8.6",
     "react-dom-confetti": "^0.1.3",
     "react-facebook-pixel": "^0.1.2",
