--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "react": "^16.8.6",
     "react-addons-test-utils": "^15.6.2",
     "react-bootstrap": "^1.0.1",
+    "react-countdown": "^2.2.1",
     "react-dom": "^16.8.6",
     "react-dom-confetti": "^0.1.3",
     "react-facebook-pixel": "^0.1.2",
     "react-ga": "^2.5.7",
     "react-modal-video": "^1.2.3",
+    "react-player": "^2.1.1",
     "react-rater": "^0.4.8",
     "react-responsive-carousel": "^3.1.51",
     "react-router-dom": "^4.3.1",
