--- a/package.json
+++ b/package.json
@@ -4,10 +4,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.28",
+    "@fortawesome/fontawesome-svg-core": "^1.2.30",
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "@fortawesome/react-fontawesome": "^0.1.9",
-    "@remy/snap": "^1.1.1",
     "array-shuffle": "^1.0.1",
     "babel-polyfill": "^6.26.0",
     "bootstrap": "^4.5.0",
@@ -20,27 +19,24 @@
     "postal": "^2.0.5",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
-    "react-addons-test-utils": "^15.6.2",
     "react-bootstrap": "^1.0.1",
     "react-countdown": "^2.2.1",
     "react-dom": "^16.8.6",
     "react-dom-confetti": "^0.1.3",
-    "react-facebook-pixel": "^0.1.2",
     "react-ga": "^2.5.7",
-    "react-modal-video": "^1.2.3",
+    "react-modal-video": "^1.2.5",
     "react-player": "^2.1.1",
     "react-rater": "^0.4.8",
     "react-responsive-carousel": "^3.1.51",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^1.1.5",
-    "react-scroll-up": "^1.3.3",
     "react-share": "^3.0.1",
     "save": "^2.4.0"
   },
   "scripts": {
     "dev": "set PORT=44300 && react-scripts start",
     "deploy": "react-scripts build",
-    "build": "react-scripts build",
+    "build": "set  GENERATE_SOURCEMAP=false  && react-scripts build --nomaps",
     "test": "react-scripts test --env=jsdom",
     "snap": "react-scripts build && react-snapshot",
     "eject": "react-scripts eject"
@@ -53,7 +49,6 @@
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-prettier": "^2.7.0",
     "eslint-plugin-react": "^7.13.0",
-    "prettier": "1.11.1",
-    "stylelint-config-recommended": "^2.2.0"
+    "prettier": "1.11.1"
   }
 }
