--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.30",
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "@fortawesome/react-fontawesome": "^0.1.9",
+    "@microsoft/immersive-reader-sdk": "^1.1.0",
     "array-shuffle": "^1.0.1",
     "babel-polyfill": "^6.26.0",
     "bootstrap": "^4.5.0",
