Updated dependencies. Added Immersive Reader Package

--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
     "chai": "^4.2.0",
     "classnames": "^2.2.6",
     "glamor": "^2.20.40",
-    "lodash": "^4.17.11",
+    "immersive-reader": "^1.3.0",
+    "lodash": "^4.17.20",
     "node-fetch": "^1.7.3",
-    "npm": "^6.14.6",
+    "npm": "^6.14.8",
     "postal": "^2.0.5",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
